Prevent breadcrumbs wrapping to a new line

--- a/src/css/main.less
+++ b/src/css/main.less
@@ -1346,6 +1346,7 @@ fieldset[disabled] .btn-info.active {
 
     a {
       color: @link-color;
+      white-space: nowrap;
 
       &:hover {
         color: darken(@link-color, 40%);
